--- a/templates/index.html
+++ b/templates/index.html
@@ -372,7 +372,7 @@ nav button.active span {
 </head>
 <body>
 
-<header>🌾 CuacaTani — 8 Jenis Tanaman</header>
+<header>🌾 CuacaTani — Aplikasi Pintar Cuaca & Tanam</header>
 
 <main>
   <!-- CUACA -->
@@ -536,7 +536,7 @@ nav button.active span {
         </div>
         
         <div class="footer-copyright">
-          © 2025 CuacaTani Bangil | Manajemen 8 Jenis Tanaman | All rights reserved
+          © 2025 CuacaTani | Aplikasi Pintar untuk Petani hebat
         </div>
       </div>
     </div>
